the div that wraps the content of the body, display it as a grid and arrange it so the aside element is placed to the left. To avoid that the  aside element is placed at the bottom left of the document, use grid-auto-flow: dense

--- a/style.css
+++ b/style.css
@@ -68,3 +68,17 @@ body {
   white-space: nowrap;
   width: 1px;
 }
+
+.main-grid {
+  display: grid;
+  grid-template-columns: 15rem auto;
+  grid-auto-flow: dense;
+}
+
+main {
+  grid-column: 2;
+}
+
+aside {
+  grid-column: 1;
+}
